--- a/angular/src/app/app-routing/landing/landing.component.html
+++ b/angular/src/app/app-routing/landing/landing.component.html
@@ -9,7 +9,7 @@
         <h1>Welcome to Group 5's Capstone!</h1>
 
     <div class="container">
-        <button class="button" routerLinkActive="active" routerLink="/login">Login/Register</button>
+        <button class="button" routerLinkActive="active" routerLink="/login">Login/Register</button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <button class="button" routerLinkActive="active" routerLink="/about">About Us</button>
 
     </div>
