--- a/angular/src/app/app-routing/login/login.component.html
+++ b/angular/src/app/app-routing/login/login.component.html
@@ -15,12 +15,11 @@
     </div>
     <div>
         <label for="password" p style="font-family:Arial, Helvetica, sans-serif">Password&nbsp;</label>
-        <input type="text" [(ngModel)]="loginForm.password" name="password" required minlength="4">
+        <input type="password" [(ngModel)]="loginForm.password" name="password" required minlength="4">
     </div> 
-<div class="center">
+<br>
+<div style="padding-left: 90px">
     <button [disabled]="LOGIN_FORM.invalid" class="button1" type="submit">Login</button>
-    <br>
-    <br>
     <button routerLinkActive="active" class="button" routerLink="/register">Register</button>
 </div>
 </form>
