--- a/angular/src/app/app-routing/register/register.component.html
+++ b/angular/src/app/app-routing/register/register.component.html
@@ -14,7 +14,7 @@
             </div>
             <div>
                 <label for="password" style="font-family:Arial, Helvetica, sans-serif">Password</label>
-                <input type="text" [(ngModel)]="registerForm.password" name="password" required minlength="4">
+                <input type="password" [(ngModel)]="registerForm.password" name="password" required minlength="4">
                 <div *ngIf="registerForm.password.length > 0 && registerForm.password.length < 4">
                     <div style="padding:0px; font-size:smaller; color:red">&nbsp;&nbsp;&nbsp;&nbsp;Required minlength: 4</div><br>
                 </div>  
