--- a/angular/src/app/app-routing/register/register.component.css
+++ b/angular/src/app/app-routing/register/register.component.css
@@ -15,6 +15,14 @@
     font-size:14px;
   }
 
+    /* Style the input fields */
+    input[type="password"] {
+        padding: 10px;
+        margin: 10px;
+        width: 300px;
+        font-size:14px;
+        }
+
     /* Style the heading */
 h1 {
     color: black; /* Sets the text color to black */
