--- a/angular/src/app/app-routing/about/about.component.html
+++ b/angular/src/app/app-routing/about/about.component.html
@@ -1,3 +1,5 @@
+<button routerLinkActive="active" routerLink="/home" style="position: relative; left:150px; top:70px;">Back</button>
+
 <h1>About</h1>
 
 <div style="padding-left: 200px; padding-right: 200px">
