--- a/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
+++ b/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
@@ -10,6 +10,6 @@
     <a routerLinkActive="active" routerLink="/home">LOG OUT</a>
 </div>
 
-<br><br><br>
+<br><br>
 
-<question></question>
+<question class="centeralign"></question>
