--- a/angular/src/app/app-routing/create-question/create-question.component.html
+++ b/angular/src/app/app-routing/create-question/create-question.component.html
@@ -14,9 +14,9 @@
     <a routerLinkActive="active" routerLink="/home">LOG OUT</a>
 </div>
 
-<br>
+<!-- <br> -->
 
-<p>Create Question</p>
+<!-- <p>Create Question</p>
 <form novalidate #QUESTION_FORM="ngForm" (ngSubmit)="onSubmitQuestion(question_form)">
     <div>
         <label for="tile">Title </label>
@@ -37,14 +37,55 @@
     <div>
         <form action="/action_page.php">
             <label for="img">Select image </label>
-            <!-- <input type='file' (change)="readUrl($event)"> -->
+            <input type='file' (change)="readUrl($event)">
             <input type="file" [(ngModel)]="question_form.image_src" id="img" name="img" accept="image/*">
         </form>
     </div>
     
     <button [disabled]="QUESTION_FORM.invalid" type="submit">Submit</button>
-</form>
+</form> -->
 <!-- 
 <div *ngIf="mailtime">
     {{subMail()}}
 </div> -->
+
+<!-- <form class="create-question-form"> -->
+
+    <!-- <head> -->
+        <!-- <link rel="stylesheet" type="text/css" href="register.component.css"> -->
+    <!-- </head> -->
+    
+    <!-- <div class="create-question-form"> -->
+        <h1>Create Question</h1>
+    
+        <form class="create-question-form" novalidate #QUESTION_FORM="ngForm" (ngSubmit)="onSubmitQuestion(question_form)">
+            <div>
+                <label for="tile">Title </label>
+                <input type="text" [(ngModel)]="question_form.title" name="title" required>
+            </div>
+        
+            <div> 
+                <label for="topic">Topic </label>
+                <input type="text" [(ngModel)]="question_form.topic" name="topic" required>
+            </div>
+        
+            <div>
+                
+                <label for="description">Description </label>
+                <textarea type="text" rows="5" cols="50" [(ngModel)]="question_form.description_question" name="description" ng-style="{width: '150px', height: '50px'}" style="width:150px; height: 50px;" style="padding-bottom: 50px;" required></textarea>
+            </div>
+            <br>
+            <div>
+                <form action="/action_page.php">
+                    <label for="img">Select image </label>
+                    <!-- <input type='file' (change)="readUrl($event)"> -->
+                    <input type="file" [(ngModel)]="question_form.image_src" id="img" name="img" accept="image/*">
+                </form>
+            </div>
+            <br><br>
+            <button [disabled]="QUESTION_FORM.invalid" type="submit">Submit</button>
+        </form>
+
+    <!-- </div> -->
+
+<!-- </form> -->
