--- a/angular/src/app/app-routing/question-details/question-details.html
+++ b/angular/src/app/app-routing/question-details/question-details.html
@@ -15,8 +15,10 @@
     <a routerLinkActive="active" routerLink="/home">LOG OUT</a>
 </div>
 
-<body>
-    <img src="{{question.image_src}}" height="100">
+<!-- <body> -->
+<h1 style="text-align:center; margin-right:700px;">Question</h1>
+<div style="text-align:center">
+    <img style="margin-left:auto; margin-right:auto;" src="{{question.image_src}}" height="100">
     <table>
         <tr style="background-color: rgb(0, 195, 255);">
         <th>Id</th>
@@ -35,9 +37,10 @@
             <td style="padding: 0 5px">{{question.description_question}}</td>
         </tr>
     </table>
+</div>
 
     
-    <h1>Answers</h1>
+    <h1 style="text-align:center; margin-right:700px;">Answers</h1>
     <div *ngIf="numOfAnswersAccepted==0; else elseBlock">No answers to display.</div>
 
     <ng-template #elseBlock>
@@ -90,7 +93,7 @@
     <br><br>
     </ng-container>
 </ng-container> -->
-<h2>Create Answer</h2>
-<answer></answer>
-</body>
+<h2 style="text-align:center; margin-right:650px;">Create Answer</h2>
+<answer style="text-align:center;"></answer>
+<!-- </body> -->
 
