--- a/angular/src/app/app-routing/register/register.component.html
+++ b/angular/src/app/app-routing/register/register.component.html
@@ -1,3 +1,4 @@
+<button routerLinkActive="active" routerLink="/home" style="position: relative; left:150px; top:70px;">Back</button>
 <form class="register-form"> 
 
     <!-- <head> -->
