Added hash location strategy

--- a/angular/src/app/question.component.html
+++ b/angular/src/app/question.component.html
@@ -23,7 +23,7 @@
     
     <button [disabled]="QUESTION_FORM.invalid" type="submit">Submit</button>
 </form> -->
-<h1>Questions</h1>
+<h1 style="text-align:center">Questions</h1>
 
 <table>
     <tr style="background-color: rgb(0, 195, 255);">
